-- SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io>
--
-- SPDX-License-Identifier: MPL-2.0

cabal-version:       2.0
name:                uncaught-exception
version:             0.1.0
synopsis:            Customize uncaught exception handling.
description:         See README.md for details.
homepage:            https://github.com/serokell/uncaught-exception
bug-reports:         https://github.com/serokell/uncaught-exception/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2020 Serokell <https://serokell.io>
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                   , README.md
tested-with:         GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.10.1

source-repository head
  type:     git
  location: https://github.com/serokell/uncaught-exception

library
  hs-source-dirs:      src
  exposed-modules:     Control.Exception.Uncaught
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-implicit-prelude

  if impl(ghc >= 8.10.1)
    ghc-options:         -Wno-missing-safe-haskell-mode

  build-depends:       base         >= 4.9  && < 5
  default-language:    Haskell2010
  default-extensions:  TypeApplications
